# riceball

./: .dockerignore  Dockerfile.aio  LICENSE  README.md  docker-compose.mcp.example.yml  docker-compose.prod.yml  docker-compose.yml  justfile
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.sandbox  entrypoint.sh  justfile  pyproject.toml  pytest.ini
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 2025_09_09_1644-e812ef3baeb5_fastapi_users.py  2025_09_11_0930-05837c9ba677_add_models_and_providers_table.py  2025_09_12_0701-0baa2d826f9a_create_system_configs_table.py  2025_09_13_0242-0c8e2d4ce139_add_assistants_tables.py  2025_09_13_0309-9331e7620e25_rename_model_config_to_config.py  2025_09_15_0320-fda5b75141d5_add_interface_type_to_model_provider.py  2025_09_17_1214-3232e4a5533a_create_file_records_table.py  2025_09_18_0638-f868e86c1da8_modify_s3_key_to_file_path_in_file_.py  2025_09_19_0845-3d4d8a47e4e6_rag.py  2025_09_21_1153-90693c660d8f_add_assistant_knowledge_base.py  2025_09_23_0132-f958365bebd5_add_temperature_to_assistant.py  2025_09_25_0922-4876f0e893dd_add_max_output_tokens_to_models_table.py  2025_09_25_1011-2352448f1649_add_max_history_messages_to_assistant.py  2025_09_26_0252-f125f7fdc415_add_file_type_to_documents.py  2025_09_28_0220-7c09e537d986_add_oauth_tables.py  (+30 more)
backend/scripts/: create_superuser.py  init_system_config.py  new_app.py  setup_oauth_providers.py
backend/src/: config.py  database.py  main.py  models.py
backend/src/agents/: __init__.py  (+5 more)
backend/tests/: conftest.py  test_fixtures.py
(+305 files in other folders)
